feat: scope PlayerService queries to current user